[package]
name = "ezg-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
shadow = "0.0.1"
pwhash = "1.0.0"
base64 = "0.22.1"
